refactor: use toList